# coinbase-agentkit-blueprint

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cursor/: general.mdc
.cursor/rules/: general.mdc
src/: agent_endpoint.rs  create_agent.rs  deploy_agent.rs  docker.rs  helpers.rs  lib.rs  main.rs  types.rs
src/tests/: agent_lifecycle_test.rs  create_agent_tests.rs  deploy_agent_tests.rs  mod.rs
templates/starter/: .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  jest.plain.config.js  package.json  tsconfig.json
templates/starter/scripts/: build_and_push.sh  docker-test.sh  run-all-tests.sh  run-real-tests.sh
templates/starter/src/: agent.ts  client.ts  config.ts  index.ts  logger.ts  types.ts
templates/starter/src/__tests__/: agent-system.test.ts  agent.test.ts  cli-mode.test.ts  config.integration.test.ts  config.test.ts  docker.test.ts  jest-setup.ts  mockUtils.ts  real-websocket.test.ts  server.test.ts  websocket.test.ts
