[package]
name = "coinbase-agent-kit-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for spawning Coinbase AgentKit AI Agents"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/coinbase-agent-kit-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["tangle", "macros"] }
phala-tee-deploy-rs = { git = "https://github.com/tangle-network/phala-tee-deploy-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["rt", "macros", "process", "fs", "time", "net"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
warp = "0.3"
regex = "1.8"
chrono = "0.4"
dotenv = "0.15.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["testing", "tangle"] }
color-eyre = "0.6.3"
tokio = { version = "1.29", features = ["full", "test-util", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
rand = "0.8"
scopeguard = "1.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "coinbase-agent-kit-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "coinbase-agent-kit-blueprint"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-coinbase-agent-kit-blueprint-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-coinbase-agent-kit-blueprint-gadget" },
]
